fix: prevent heading lines overlap with navbar in desktop mode
Adjusted the margin-top property for the heading lines within the
section#hero div.content to ensure proper spacing and prevent overlap
with the navigation bar in desktop mode.

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -92,6 +92,10 @@ section#hero {
     .buttons {
       margin-left: -1.5rem;
     }
+    // media query to prevent navbar from overlapping with the heading on desktop
+    @media screen and (min-width: 1024px) {
+      margin-top: 40px;
+    }
   }
 }
 
